# iref-enum

./: CHANGELOG.md  Cargo.toml  README.md  README.tpl
examples/: simple.rs
src/: lib.rs
tests/: simple.rs
